# Smart-Wallet-System

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Client-App/: CMakeLists.txt
Client-App/include/client/: App.h
Client-App/src/: App.cpp  main.cpp
GUI/: CMakeLists.txt
GUI/include/gui/: Window.h
GUI/src/: Window.cpp
Server-App/: CMakeLists.txt
Server-App/include/server/: App.h
Server-App/src/: App.cpp  main.cpp
Smart-Wallet-System/: CMakeLists.txt
Smart-Wallet-System/include/sws/: Base.h  Client.h  Client_ID.h  Client_Info.h  Command.h  Message.h  Serializer.h  Server.h  TCP.h  Transaction.h  Undo_Redo.h
Smart-Wallet-System/src/: Base.cpp  Client.cpp  Client_ID.cpp  Client_Info.cpp  Command.cpp  Message.cpp  Server.cpp  TCP.cpp  Transaction.cpp  Undo_Redo.cpp
playground/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
